[Prime Factors] 3. 3을 입력하면 {3} 리턴