@@ -5,7 +5,7 @@ import java.util.List;
 
 public class PrimeFactors {
     public List<Integer> generate(int input) {
-        if (input == 2) return List.of(2);
-        return Collections.emptyList();
+        if (input < 2) return Collections.emptyList();
+        return List.of(input);
     }
 }
